--- a/Frontend/src/app/User/user-profile-edit/user-profile-edit.component.html
+++ b/Frontend/src/app/User/user-profile-edit/user-profile-edit.component.html
@@ -1,111 +1,221 @@
-<div style="display: flex; justify-content: center; align-items: center;">
-  <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmit()">
-    <!--(ngSubmit)="onSubmit()"-->
-    <mat-card style="width: 600px; margin-top: 3.2%; align-items: center; margin-bottom: 1%;">
-      <mat-card-header>
-        <div class="avatar-container">
-          <div class="image-container"
-               [ngClass]="{'box-shadow-avatar': !!file}">
-            <img class="image-container" src="{{usr.profile_Picture}}" style="object-fit: cover;"/>
+<div *ngIf="rAdmin; else elseBlock">
+  <div style="display: flex; justify-content: center; align-items: center;">
+    <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmitA()">
+      <!--(ngSubmit)="onSubmit()"-->
+      <mat-card style="width: 600px; margin-top: 3.2%; align-items: center; margin-bottom: 1%;">
+        <mat-card-header>
+          <div class="avatar-container">
+            <div class="image-container"
+                 [ngClass]="{'box-shadow-avatar': !!file}">
+              <img class="image-container" src="{{usr.profile_Picture}}" style="object-fit: cover;" />
+            </div>
+
+            <label for="avatar-input-file">
+              <div class="icon-wrapper">
+                <input type="file" id="avatar-input-file" accept="image/*" (change)="onFileChange($event)" />
+                <mat-icon class="icon" style="color:white;">edit</mat-icon>
+              </div>
+            </label>
+            <br />
+
           </div>
 
-          <label for="avatar-input-file">
-            <div class="icon-wrapper">
-              <input type="file" id="avatar-input-file" accept="image/*" (change)="onFileChange($event)" />
-              <mat-icon class="icon" style="color:white;">edit</mat-icon>
-            </div>
-          </label>
-          <br />
+        </mat-card-header>
+        <mat-card-subtitle>
+          <table style="width:100%;" cellspacing="0">
+            <tr>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;" for="AdminName">Name:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="AdminName" id="AdminName" required>
+                    <mat-hint align="end">Not more then 32 characters long.</mat-hint>
+                    <mat-error *ngIf="myError('AdminName', 'required')">Name is required</mat-error>
+                    <mat-error *ngIf="myError('AdminName', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('AdminName', 'minlength')">
+                      Name must be 3 to 32 characters
+                      long
+                    </mat-error>
+                    <mat-error *ngIf="myError('AdminName', 'pattern')">Name can not contain numbers</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color: black;">Surname:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="AdminSurname" id="AdminSurname"
+                           required>
+                    <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                    <mat-error *ngIf="myError('AdminSurname', 'required')">Surname is required</mat-error>
+                    <mat-error *ngIf="myError('AdminSurname', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('AdminSurname', 'pattern')">Surname can not contain numbers</mat-error>
+                    <mat-error *ngIf="myError('AdminSurname', 'minlength')">
+                      Surname must be 3 to 50 characters
+                      long
+                    </mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+            </tr>
+            <tr>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;">Email:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="email" placeholder="" formControlName="Email" id="Email" required>
+                    <mat-error *ngIf="myError('Email', 'required')">Email is required</mat-error>
+                    <mat-error *ngIf="myError('Email', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('Email', 'email')">Enter a valid email</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;">Phone Number:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="CellPhone_Num" id="CellPhone_Num"
+                           required>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'required')">Phone is required</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'minlength')">Phone number must be 10 numbers</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'pattern')">Please enter a valid phone number</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+            </tr>
+          </table>
+        </mat-card-subtitle>
+        <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
+          <button mat-raised-button type="submit"
+                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#94CC5B; color: white;" [disabled]="!myForm.valid">
+            Save
+          </button>
+          <button mat-raised-button
+                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+                  (click)="Close()">
+            Cancel
+          </button>
+        </mat-card-actions>
 
-        </div>
-        
-      </mat-card-header>
-      <mat-card-subtitle>
-
-        <table style="width:100%;" cellspacing="0">
-          <tr>
-            <td style="width:100%;">
-              <mat-card-content>
-                <label style=" color:black;" for="AdminName">Name:</label>
-                <br />
-                <mat-form-field>
-                  <input matInput type="text" placeholder="" formControlName="AdminName" id="AdminName" required>
-                  <mat-hint align="end">Not more then 32 characters long.</mat-hint>
-                  <mat-error *ngIf="myError('AdminName', 'required')">Name is required</mat-error>
-                  <mat-error *ngIf="myError('AdminName', 'maxlength')">Limit exceed</mat-error>
-                  <mat-error *ngIf="myError('AdminName', 'minlength')">
-                    Name must be 3 to 32 characters
-                    long
-                  </mat-error>
-                  <mat-error *ngIf="myError('AdminName', 'pattern')">Name can not contain numbers</mat-error>
-                </mat-form-field>
-              </mat-card-content>
-            </td>
-            <td style="width:100%;">
-              <mat-card-content>
-                <label style=" color: black;">Surname:</label>
-                <br />
-                <mat-form-field>
-                  <input matInput type="text" placeholder="" formControlName="AdminSurname" id="AdminSurname"
-                         required>
-                  <mat-hint align="end">Not more then 50 characters long.</mat-hint>
-                  <mat-error *ngIf="myError('AdminSurname', 'required')">Surname is required</mat-error>
-                  <mat-error *ngIf="myError('AdminSurname', 'maxlength')">Limit exceed</mat-error>
-                  <mat-error *ngIf="myError('AdminSurname', 'pattern')">Surname can not contain numbers</mat-error>
-                  <mat-error *ngIf="myError('AdminSurname', 'minlength')">
-                    Surname must be 3 to 50 characters
-                    long
-                  </mat-error>
-                </mat-form-field>
-              </mat-card-content>
-            </td>
-          </tr>
-          <tr>
-            <td style="width:100%;">
-              <mat-card-content>
-                <label style=" color:black;">Email:</label>
-                <br />
-                <mat-form-field>
-                  <input matInput type="email" placeholder="" formControlName="Email" id="Email" required>
-                  <mat-error *ngIf="myError('Email', 'required')">Email is required</mat-error>
-                  <mat-error *ngIf="myError('Email', 'maxlength')">Limit exceed</mat-error>
-                  <mat-error *ngIf="myError('Email', 'email')">Enter a valid email</mat-error>
-                </mat-form-field>
-              </mat-card-content>
-            </td>
-            <td style="width:100%;">
-              <mat-card-content>
-                <label style=" color:black;">Phone Number:</label>
-                <br />
-                <mat-form-field>
-                  <input matInput type="text" placeholder="" formControlName="CellPhone_Num" id="CellPhone_Num"
-                         required>
-                  <mat-error *ngIf="myError('CellPhone_Num', 'required')">Phone is required</mat-error>
-                  <mat-error *ngIf="myError('CellPhone_Num', 'maxlength')">Limit exceed</mat-error>
-                  <mat-error *ngIf="myError('CellPhone_Num', 'minlength')">Phone number must be 10 numbers</mat-error>
-                  <mat-error *ngIf="myError('CellPhone_Num', 'pattern')">Please enter a valid phone number</mat-error>
-                </mat-form-field>
-              </mat-card-content>
-            </td>
-          </tr>
-        </table>
-
-
-      </mat-card-subtitle>
-      <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-        <button mat-raised-button type="submit"
-                style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#94CC5B; color: white;" [disabled]="!myForm.valid">
-          Save
-        </button>
-        <button mat-raised-button
-                style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-                (click)="Close()">
-          Cancel
-        </button>
-      </mat-card-actions>
-
-    </mat-card>
-  </form>
+      </mat-card>
+    </form>
+  </div>
 </div>
+
+<ng-template #elseBlock>
+  <div style="display: flex; justify-content: center; align-items: center;">
+    <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px" (ngSubmit)="onSubmitE()">
+      <!--(ngSubmit)="onSubmit()"-->
+      <mat-card style="width: 600px; margin-top: 3.2%; align-items: center; margin-bottom: 1%;">
+        <mat-card-header>
+          <div class="avatar-container">
+            <div class="image-container"
+                 [ngClass]="{'box-shadow-avatar': !!file}">
+              <img class="image-container" src="{{usr.profile_Picture}}" style="object-fit: cover;" />
+            </div>
+
+            <label for="avatar-input-file">
+              <div class="icon-wrapper">
+                <input type="file" id="avatar-input-file" accept="image/*" (change)="onFileChange($event)" />
+                <mat-icon class="icon" style="color:white;">edit</mat-icon>
+              </div>
+            </label>
+            <br />
+
+          </div>
+
+        </mat-card-header>
+        <mat-card-subtitle>
+          <table style="width:100%;" cellspacing="0">
+            <tr>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;" for="Name">Name:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="Name" id="Name" required>
+                    <mat-hint align="end">Not more then 32 characters long.</mat-hint>
+                    <mat-error *ngIf="myError('Name', 'required')">Name is required</mat-error>
+                    <mat-error *ngIf="myError('Name', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('Name', 'minlength')">
+                      Name must be 3 to 32 characters
+                      long
+                    </mat-error>
+                    <mat-error *ngIf="myError('Name', 'pattern')">Name can not contain numbers</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color: black;">Surname:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="Surname" id="Surname"
+                           required>
+                    <mat-hint align="end">Not more then 50 characters long.</mat-hint>
+                    <mat-error *ngIf="myError('Surname', 'required')">Surname is required</mat-error>
+                    <mat-error *ngIf="myError('Surname', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('Surname', 'pattern')">Surname can not contain numbers</mat-error>
+                    <mat-error *ngIf="myError('Surname', 'minlength')">
+                      Surname must be 3 to 50 characters
+                      long
+                    </mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+            </tr>
+            <tr>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;">Email:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="email" placeholder="" formControlName="Email" id="Email" required>
+                    <mat-error *ngIf="myError('Email', 'required')">Email is required</mat-error>
+                    <mat-error *ngIf="myError('Email', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('Email', 'email')">Enter a valid email</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+              <td style="width:100%;">
+                <mat-card-content>
+                  <label style=" color:black;">Phone Number:</label>
+                  <br />
+                  <mat-form-field>
+                    <input matInput type="text" placeholder="" formControlName="CellPhone_Num" id="CellPhone_Num"
+                           required>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'required')">Phone is required</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'maxlength')">Limit exceed</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'minlength')">Phone number must be 10 numbers</mat-error>
+                    <mat-error *ngIf="myError('CellPhone_Num', 'pattern')">Please enter a valid phone number</mat-error>
+                  </mat-form-field>
+                </mat-card-content>
+              </td>
+            </tr>
+          </table>
+        </mat-card-subtitle>
+        <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
+          <button mat-raised-button type="submit"
+                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#94CC5B; color: white;" [disabled]="!myForm.valid">
+            Save
+          </button>
+          <button mat-raised-button
+                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+                  (click)="Close()">
+            Cancel
+          </button>
+        </mat-card-actions>
+
+      </mat-card>
+    </form>
+  </div>
+</ng-template>
+
+
 
 
