--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: center; align-items: center;">
+<!--<div style="display: flex; justify-content: center; align-items: center;">
     <mat-card style="width: 600px; margin-top: 1%; align-items: center; ">
         <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px"
             (ngSubmit)="LoginUser()">
@@ -48,4 +48,71 @@
             &nbsp;
         </form>
     </mat-card>
+</div>-->
+
+
+
+<div class="container" id="container">
+  <!--Forgot Password-->
+  <div class="form-container sign-up-container">
+    <form action="#">
+      <h1>Forgot Password</h1>
+
+      <mat-form-field appearance="outline" style="margin-top:10px; margin-bottom:25px;">
+        <mat-label>Email</mat-label>
+        <input matInput type="email" placeholder="johndoe@gmail.com">
+               <!--formControlName="EmailUsername" id="Name" required [(ngModel)]="Email"-->
+        <mat-hint align="end">
+          Please enter a valid email to reset your
+          password
+        </mat-hint>
+      </mat-form-field>
+
+      <button>Reset Password</button>
+    </form>
+  </div>
+
+  <!--Login-->
+  <div class="form-container sign-in-container">
+    <form [formGroup]="myForm" novalidate fxLayout="column wrap" fxLayoutAlign="center center" fxLayoutGap="10px"
+          (ngSubmit)="LoginUser()">
+
+      <h1>Login</h1>
+
+      <mat-form-field appearance="outline" style="margin-top:10px;">
+        <mat-label>Username</mat-label>
+        <input matInput type="text" placeholder="" formControlName="UserName" id="Name"
+               required [(ngModel)]="userName">
+      </mat-form-field>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Password</mat-label>
+        <input matInput type="password" placeholder="" formControlName="Password"
+               id="Surname" required [(ngModel)]="password">
+      </mat-form-field>
+
+      <button type="submit"
+              [disabled]="!myForm.valid">
+        Login
+      </button>
+
+    </form>
+  </div>
+
+  <!--Side Containers-->
+  <div class="overlay-container">
+    <div class="overlay">
+      <div class="overlay-panel overlay-left">
+        <h1>Welcome Back!</h1>
+        <p>To keep connected with us please login with your personal info</p>
+        <button class="ghost" id="signIn" (click)="removeList()">Login</button>
+      </div>
+      <div class="overlay-panel overlay-right">
+        <h1 style="margin-bottom:10px;">Forgot Password?</h1>
+        <button class="ghost" id="signUp" (click)="addList()">Forgot Password</button>
+      </div>
+    </div>
+  </div>
 </div>
+
+
