--- a/Frontend/src/app/view-employee-role/view-employee-role.component.css
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.css
@@ -94,4 +94,69 @@ table {
   }
 }
 
-      
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
+button {
+  width: 150px;
+  height: 36px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background: red;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.15);
+  background-color: #22afbe;
+}
+
+  button, button span {
+    transition: 200ms;
+  }
+
+    button .text {
+      transform: translateX(35px);
+      color: black;
+      font-weight: bold;
+    }
+
+    button .icon {
+      position: absolute;
+      border-left: 1px solid #22afbe;
+      transform: translateX(110px);
+      height: 36px;
+      width: 36px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    button svg {
+      width: 15px;
+      fill: #000;
+    }
+
+    button:hover {
+      background-color: #FE4945;
+    }
+
+      button:hover .text {
+        color: transparent;
+      }
+
+      button:hover .icon {
+        width: 150px;
+        border-left: none;
+        transform: translateX(0);
+      }
+
+    button:focus {
+      outline: none;
+    }      
