--- a/Frontend/src/app/create-consumable/create-consumable.component.html
+++ b/Frontend/src/app/create-consumable/create-consumable.component.html
@@ -118,13 +118,28 @@
                 </mat-card-subtitle>
             </mat-card-header>
             <mat-card-actions style="display: flex; justify-content: center; align-items: center; margin-top: 5%;">
-                <button mat-raised-button type="submit"
-                    style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
-                    [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">Save</button>
+              <!--<button mat-raised-button type="submit"
+                      style="width: 150px; font-size: 14px; height: 42px; margin: 10px;" [disabled]="!myForm.valid"
+                      [ngStyle]="{'background-color': !myForm.valid ? 'rgba(148, 204, 91, 0.6)' : '#94CC5B','color': !myForm.valid ? 'rgba(255, 255, 255, 0.6)' : 'white'}">
+                Save
+              </button>-->
 
-                <button mat-raised-button
-                    style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-                    (click)="Close()">Cancel</button>
+              <div class="wrapper">
+                <button class="" type="submit" [disabled]="!myForm.valid">
+                  <span>Save</span>
+                  <div class="success">
+                    <svg xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" viewBox="0 0 29.756 29.756" style="enable-background:new 0 0 29.756 29.756;" xml:space="preserve">
+                    <path d="M29.049,5.009L28.19,4.151c-0.943-0.945-2.488-0.945-3.434,0L10.172,18.737l-5.175-5.173   c-0.943-0.944-2.489-0.944-3.432,0.001l-0.858,0.857c-0.943,0.944-0.943,2.489,0,3.433l7.744,7.752   c0.944,0.943,2.489,0.943,3.433,0L29.049,8.442C29.991,7.498,29.991,5.953,29.049,5.009z" />
+                </svg>
+                  </div>
+                </button>
+              </div>
+
+              <button mat-raised-button id="cBtn"
+                      style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688;"
+                      (click)="Close()">
+                Cancel
+              </button>
             </mat-card-actions>
         </form>
     </mat-card>
