--- a/Frontend/src/app/main-nav/main-nav.component.html
+++ b/Frontend/src/app/main-nav/main-nav.component.html
@@ -4,7 +4,7 @@
     <span class="main-spacer"></span>
     <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home" class="sub-spacer"
               routerLink="/Home" (click)="reload()"></mat-icon>
-    <a *ngIf="this.RoleToUse === 'Admin'" class="sub-spacer"
+    <a *ngIf="rAdmin" class="sub-spacer"
        style="font-size: 16pt; text-decoration: none; color: white;" routerLink="/ViewEmployee"
        mat-button (click)="reload()">Administration</a>
     <a class="sub-spacer" style="font-size:16pt; text-decoration:none; color:white;" routerLink="/ViewConsumable"
