--- a/Frontend/src/app/view-employee-role/view-employee-role.component.html
+++ b/Frontend/src/app/view-employee-role/view-employee-role.component.html
@@ -9,12 +9,12 @@
       </div>
 
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
-      <a mat-list-item *ngIf='RoleToUse === "Admin"' class="uni-font" routerLink="/ViewAdmin">Admins</a>
+      <a mat-list-item *ngIf="rAdmin" class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item *ngIf='RoleToUse === "Admin"' mat-list-item class="uni-font"
+      <a mat-list-item *ngIf="rAdmin" mat-list-item class="uni-font"
         routerLink="/ViewDepartment">Departments</a>
-      <a mat-list-item *ngIf='RoleToUse === "Admin"' mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
-      <a mat-list-item class="uni-font">Delegation of Authority</a>
+      <a mat-list-item *ngIf="rAdmin" mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
+      <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
       <a mat-list-item class="uni-font">Settings</a>
