--- a/Frontend/src/app/login/login.component.css
+++ b/Frontend/src/app/login/login.component.css
@@ -1,5 +1,5 @@
-.main-nav{
-    display:none;
+.main-nav {
+  display: none;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
@@ -60,18 +60,18 @@ button {
   transition: transform 80ms ease-in;
 }
 
-  button:active {
-    transform: scale(0.95);
-  }
+button:active {
+  transform: scale(0.95);
+}
 
-  button:focus {
-    outline: none;
-  }
+button:focus {
+  outline: none;
+}
 
-  button.ghost {
-    background-color: transparent;
-    border-color: #FFFFFF;
-  }
+button.ghost {
+  background-color: transparent;
+  border-color: #FFFFFF;
+}
 
 form {
   background-color: #FFFFFF;
@@ -95,7 +95,7 @@ input {
 .container {
   background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   position: relative;
   overflow: hidden;
   width: 768px;
@@ -135,12 +135,15 @@ input {
 }
 
 @keyframes show {
-  0%, 49.99% {
+
+  0%,
+  49.99% {
     opacity: 0;
     z-index: 1;
   }
 
-  50%, 100% {
+  50%,
+  100% {
     opacity: 1;
     z-index: 5;
   }
@@ -211,4 +214,63 @@ input {
 
 .container.right-panel-active .overlay-right {
   transform: translateX(20%);
+}
+
+#loading {
+
+  display: none;
+}
+
+.loader {
+  position: relative;
+  border-style: solid;
+  box-sizing: border-box;
+  border-width: 40px 60px 30px 60px;
+  border-color: #3760C9 #96DDFC #96DDFC #36BBF7;
+  animation: envFloating 1s ease-in infinite alternate;
+}
+
+.loader:after {
+  content: "";
+  position: absolute;
+  right: 62px;
+  top: -40px;
+  height: 70px;
+  width: 50px;
+  background-image: linear-gradient(#94CC5B 45px, transparent 0), linear-gradient(#94CC5B 45px, transparent 0), linear-gradient(#94CC5B 45px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 30px 4px;
+  background-position: 0px 11px, 8px 35px, 0px 60px;
+  animation: envDropping 0.75s linear infinite;
+}
+
+@keyframes envFloating {
+  0% {
+    transform: translate(-2px, -5px)
+  }
+
+  100% {
+    transform: translate(0, 5px)
+  }
+}
+
+@keyframes envDropping {
+  0% {
+    background-position: 100px 11px, 115px 35px, 105px 60px;
+    opacity: 1;
+  }
+
+  50% {
+    background-position: 0px 11px, 20px 35px, 5px 60px;
+  }
+
+  60% {
+    background-position: -30px 11px, 0px 35px, -10px 60px;
+  }
+
+  75%,
+  100% {
+    background-position: -30px 11px, -30px 35px, -30px 60px;
+    opacity: 0;
+  }
 }
