--- a/Frontend/src/app/update-consumable-stock/update-consumable-stock.component.css
+++ b/Frontend/src/app/update-consumable-stock/update-consumable-stock.component.css
@@ -4,6 +4,27 @@
     height: 100%;
 }
 
+.CloseButton {
+    transform: translate(-0%, -0%) !important;
+    width: 150px !important;
+    height: 42px !important;
+    font-size: 14px !important;
+    font-weight: bold !important;
+    border: 3px solid #244688 !important;
+    border-radius: 5px !important;
+    background: #fff !important;
+    color: #244688 !important;
+    cursor: pointer !important;
+    overflow: hidden !important;
+    transition: all .35s !important;
+
+}
+
+.CloseButton:hover {
+    background: #244688 !important;
+    color: #fff !important;
+}
+
 button {
     transform: translate(-0%, -0%);
     width: 150px;
