--- a/Frontend/src/app/view-consumable/view-consumable.component.html
+++ b/Frontend/src/app/view-consumable/view-consumable.component.html
@@ -28,6 +28,10 @@
                 style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
                 routerLink="/CreateConsumable">Create Consumable</button>
 
+            <button mat-raised-button
+                style="width: 200px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
+                (click)="ExportInventoryDetails()">Export Details</button>
+
             <span style="flex: 1 1 auto;"></span>
 
             <mat-form-field appearance="fill"
