Delegation of authority create, view, edit, delete

--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.css
@@ -160,3 +160,8 @@ button {
     button:focus {
       outline: none;
     }
+
+a:not([href]):not([class]), a:not([href]):not([class]):hover {
+  text-decoration: underline;
+  cursor: pointer !important;
+}
