--- a/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
+++ b/Frontend/src/app/Delegation/view-delegation/view-delegation.component.html
@@ -9,11 +9,11 @@
       </div>
 
       <a mat-list-item class="uni-font" routerLink="/ViewEmployee">Employees</a>
-      <a mat-list-item *ngIf="rAdmin" class="uni-font" routerLink="/ViewAdmin">Admins</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewAdmin">Admins</a>
       <a mat-list-item class="uni-font" routerLink="/ViewEmpRole">Roles</a>
-      <a mat-list-item *ngIf="rAdmin" mat-list-item class="uni-font"
+      <a mat-list-item mat-list-item class="uni-font"
          routerLink="/ViewDepartment">Departments</a>
-      <a mat-list-item *ngIf="rAdmin" mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
+      <a mat-list-item mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
       <a mat-list-item class="uni-font">Manage Help</a>
@@ -26,12 +26,6 @@
     </h1>
 
     <div mat-list-item style="margin-left: 0.5%; display: flex;  align-items: center; ">
-
-      <button mat-raised-button *ngIf="rAdmin"
-              style="width: 230px; font-size: 14px; height: 42px; margin: 10px; background-color:#244688; color:white;"
-              routerLink="/">
-        Assign New Delegation
-      </button>
 
       <span style="flex: 1 1 auto;"></span>
 
@@ -48,50 +42,51 @@
       <span class="loader" id="loading"></span>
     </div>
 
-    <div style="margin-right:1%; margin-left:1%;">
-      <table mat-table [dataSource]="SearchedEmployee" class="mat-elevation-z8" id="table">
+    <!-- --------------------------------------------------------------------------------- ADMIN TEMPLATE ------------------------------------------------------------------------------------------------------------------->
+    <div style="margin-right:1%; margin-left:1%;" *ngIf="rAdmin">
+      <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" id="table">
 
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
-          <td mat-cell *matCellDef="let Employees">{{Employees.employeeID}}</td>
+          <td mat-cell *matCellDef="let row">{{row.delegation_ID}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="username">
-          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Username </th>
-          <td mat-cell *matCellDef="let Employees"> {{Employees.user.username}} </td>
+        <ng-container matColumnDef="delegatingParty">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegating Party </th>
+          <td mat-cell *matCellDef="let row"> {{row.delegatingParty}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Delegate">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegate </th>
+          <td mat-cell *matCellDef="let row"> {{row.user.username}} </td>
         </ng-container>
 
         <!-- name Column -->
         <ng-container matColumnDef="sDate">
           <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Start Date </th>
-          <td mat-cell *matCellDef="let Employees"> {{Employees.employeeName}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.from_Date | date:'dd/MM/yyyy'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="eDate">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> End Date </th>
-          <td mat-cell *matCellDef="let Employees"> {{Employees.employeeSurname}} </td>
+          <td mat-cell *matCellDef="let row"> {{row.to_Date | date:'dd/MM/yyyy'}} </td>
         </ng-container>
 
         <ng-container matColumnDef="doaForm">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegation Form </th>
-          <td mat-cell *matCellDef="let Employees"> {{Employees.employeeSurname}} </td>
+          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank" style="color: black;">{{FileDetails[i].FileName}}</a></td>
         </ng-container>
 
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Status </th>
-          <td mat-cell *matCellDef="let Employees"> {{Employees.employeeSurname}} </td>
+          <td mat-cell *matCellDef="let row" matTooltip="{{row.delegation_Status.description}}"> {{row.delegation_Status.name}} </td>
         </ng-container>
 
 
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let Employees" style="width:100px;">
-            <!--<button mat-raised-button
-      style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 85px; margin-top: 0.5%; background-color: #94CC5B;"
-      [routerLink]="['/EditEmp', Employees.user_Id]" type="button"><mat-icon matPrefix
-        style="margin-right:10%;">edit</mat-icon>Edit</button>-->
-
-            <button class="noselect" [routerLink]="['/EditEmp', Employees.user_Id]" type="button" style="background-color: #94CC5B;">
+          <td mat-cell *matCellDef="let row" style="width:100px;">
+            <button class="noselect" type="button" style="background-color: #94CC5B;" [routerLink]="['/EditDelegation', row.delegation_ID]">
               <span class='text'>Edit</span>
               <span class="icon" style="border-left: 1px solid #94CC5B; ">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z" /></svg>
@@ -102,14 +97,8 @@
 
         <ng-container matColumnDef="delete">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let Employees" style="width:140px;">
-            <!--<button id="DeleteButton" mat-raised-button
-      style="margin-right: 5%; display: flex; align-items: center; font-size: 16px; width: 110px; margin-top: 0.5%;"
-      (click)="DeleteEmployee(Employees.user_Id)"><mat-icon matPrefix
-        style="margin-right:10%;">delete</mat-icon>Delete</button>-->
-
-            <!--(click)="DeleteEmployee(Employees.user_Id)"-->
-            <button class="noselect" >
+          <td mat-cell *matCellDef="let row" style="width:140px;">
+            <button class="noselect" (click)="DeleteDelegation(row.delegation_ID)">
               <span class='text'>Delete</span>
               <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
@@ -126,10 +115,102 @@
           </td>
         </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns" style="background-color:#244688;"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsAdmin" style="background-color:#244688;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsAdmin;"></tr>
       </table>
     </div>
+
+
+
+    <!-- --------------------------------------------------------------------------------- MD TEMPLATE ------------------------------------------------------------------------------------------------------------------->
+    <div style="margin-right:1%; margin-left:1%;" *ngIf="rMD">
+      <table mat-table [dataSource]="dataSourceMD" class="mat-elevation-z8" id="table">
+
+        <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>
+          <td mat-cell *matCellDef="let row">{{row.delegation_ID}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="delegatingParty">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegating Party </th>
+          <td mat-cell *matCellDef="let row"> {{row.delegatingParty}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Delegate">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegate </th>
+          <td mat-cell *matCellDef="let row"> {{row.user.username}} </td>
+        </ng-container>
+
+        <!-- name Column -->
+        <ng-container matColumnDef="sDate">
+          <th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> Start Date </th>
+          <td mat-cell *matCellDef="let row"> {{row.from_Date | date:'dd/MM/yyyy'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="eDate">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> End Date </th>
+          <td mat-cell *matCellDef="let row"> {{row.to_Date | date:'dd/MM/yyyy'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="doaForm">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Delegation Form </th>
+          <td mat-cell *matCellDef="let row; let i = index;"> <a (click)="openPDFInNewTab(i)" target="_blank" style="color: black;">{{FileDetails[i].FileName}}</a></td>
+        </ng-container>
+
+        <ng-container matColumnDef="status">
+          <th mat-header-cell *matHeaderCellDef style="color: white; font-weight: 600;"> Status </th>
+          <td mat-cell *matCellDef="let row" matTooltip="{{row.delegation_Status.description}}"> {{row.delegation_Status.name}} </td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="accept">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row" style="width:100px;">
+            <button class="noselect" type="button" style="background-color: #94CC5B;" (click)="acceptRequest(row.delegation_ID)">
+              <span class='text'>Accept</span>
+              <span class="icon" style="border-left: 1px solid #94CC5B; ">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512">
+                  <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <style>
+                    svg {
+                      fill: #000000
+                    }
+                  </style>
+                  <path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z" />
+                </svg>
+              </span>
+            </button>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="reject">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let row" style="width:140px;">
+            <button class="noselect" (click)="rejectRequest(row.delegation_ID)">
+              <span class='text'>Reject</span>
+              <span class="icon">
+                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512">
+                  <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+                  <style>
+                    svg {
+                      fill: #000000
+                    }
+                  </style>
+                  <path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z" />
+                </svg>
+              </span>
+            </button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumnsMD" style="background-color:#244688;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumnsMD;"></tr>
+      </table>
+      <!--<mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons>
+    </mat-paginator>-->
+    </div>
+
 
 
 
