--- a/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
+++ b/Frontend/src/app/view-mandate-limit/view-mandate-limit.component.html
@@ -17,7 +17,7 @@
                 routerLink="/ViewBranch">Branch</a>
             <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
             <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
-            <a mat-list-item class="uni-font">Manage Help</a>
+            <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
             <a mat-list-item class="uni-font">Settings</a>
         </mat-nav-list>
     </mat-sidenav>
