--- a/Frontend/src/app/view-employee/view-employee.component.html
+++ b/Frontend/src/app/view-employee/view-employee.component.html
@@ -16,7 +16,7 @@
       <a mat-list-item *ngIf="rAdmin" mat-list-item class="uni-font" routerLink="/ViewBranch">Branch</a>
       <a mat-list-item class="uni-font" routerLink="/Delegation">Delegation of Authority</a>
       <a mat-list-item class="uni-font" routerLink="/ViewMandateLimit">Mandate Limits</a>
-      <a mat-list-item class="uni-font">Manage Help</a>
+      <a mat-list-item class="uni-font" routerLink="/ViewHelp">Manage Help</a>
       <a mat-list-item class="uni-font">Settings</a>
     </mat-nav-list>
   </mat-sidenav>
