Updated vendor approve and moved tables as requested by client and fix any other bugs

--- a/Frontend/src/app/onboard_request/request-create/request-create.component.css
+++ b/Frontend/src/app/onboard_request/request-create/request-create.component.css
@@ -28,7 +28,9 @@ td {
 }
 
 ::ng-deep .mat-mdc-tab-body-content {
-    height:335px!important;
+    /* //height:335px!important; */
+    inline-size: max-content;
+    height:fit-content!important;
 }
 
 mat-error {
