--- a/Frontend/src/app/onboard_request/request-update/request-update.component.html
+++ b/Frontend/src/app/onboard_request/request-update/request-update.component.html
@@ -51,7 +51,11 @@
           <a href="{{FileDetails[i].FileURL}}" download="{{FileDetails[i].FileName}}">{{FileDetails[i].FileName}}</a>  
         </td>
     </tr>
-      <br>
+    <br>
+    <tr>
+      <td><label>Select as preferred vendor:</label></td>
+      <td><mat-checkbox formControlName="PrefferedVendor" (click)="onPreferredChecked(i)" ></mat-checkbox></td>
+    </tr>   
       <tr>
         <td></td>
         <td>  
