--- a/Frontend/src/app/Notification-Hub/view-notification-hub/view-notification-hub.component.html
+++ b/Frontend/src/app/Notification-Hub/view-notification-hub/view-notification-hub.component.html
@@ -1,102 +1,124 @@
 <mat-tab-group>
   <mat-tab label="Vendor">
 
-    <!--<table mat-table [dataSource]="SearchedAdmin" class="mat-elevation-z8" id="table">
+    <table mat-table [dataSource]="dataSourceVendor" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
+      <ng-container matColumnDef="id" style="width: 800px;">
+        <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
+        <td mat-cell *matCellDef="let row" style="width: 800px;">
 
-    <ng-container matColumnDef="id">
-      <td mat-cell *matCellDef="let Admins">{{Admins.admin_ID}}</td>
-    </ng-container>
+          <mat-card style="width: 800px; margin-bottom: 20px; margin-top: 20px;">
+            <mat-card-header style="border-bottom:solid 2px;">
+              <mat-card-title-group>
+                <mat-card-title>
+                  <div mat-list-item style="display: flex; align-items: center; width:750px;">
+                    <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
+                              style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
+                    <h1 style="font-size:20pt">{{row.notification_Type.name}}</h1>
+                  </div>
+                </mat-card-title>
+                <mat-card-subtitle style="margin-bottom:10px;">{{row.send_Date}}</mat-card-subtitle>
+              </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content style="font-size:16pt; margin-top: 20px;">
+              <p>{{row.name}}</p>
+              <br />
+              <p>{{row.notification_Type.description}}</p>
 
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>-->
-    <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-      <mat-card style="width:600px;">
-        <mat-card-header style="border-bottom:solid 2px;">
-          <mat-card-title-group>
-            <mat-card-title>
-              <div mat-list-item style="display: flex; align-items: center; width:400px;">
-                <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
-                          style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
-                <h1 style="font-size:20pt">New Vendor Onboard Request</h1>
-              </div>
-            </mat-card-title>
-            <mat-card-subtitle style="margin-bottom:10px;">{{todayDate | date:'short'}}</mat-card-subtitle>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content style="font-size:16pt; margin-top: 20px;">
-          <p>A new vendor onboard request has been submitted.</p>
-          <br />
-          <p>Please review the request and respond accordingly.</p>
+            </mat-card-content>
+            <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
+              <button mat-raised-button
+                      style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
+                <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </td>
+      </ng-container>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="width: 800px; background-color: #ffffff00"></tr>
+    </table>
 
-        </mat-card-content>
-        <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
-          <button mat-raised-button
-                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
-            <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-      <mat-card style="width:600px;">
-        <mat-card-header style="border-bottom:solid 2px;">
-          <mat-card-title-group>
-            <mat-card-title>
-              <div mat-list-item style="display: flex; align-items: center; width:400px;">
-                <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
-                          style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
-                <h1 style="font-size:20pt">BEE renewal</h1>
-              </div>
-            </mat-card-title>
-            <mat-card-subtitle style="margin-bottom:10px;">{{todayDate | date:'short'}}</mat-card-subtitle>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content style="font-size:16pt; margin-top: 20px;">
-          <p>A new vendor onboard request has been submitted.</p>
-          <br />
-          <p>Please review the request and respond accordingly.</p>
-
-        </mat-card-content>
-        <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
-          <button mat-raised-button
-                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
-            <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
-
-    <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-      <mat-card style="width:600px;">
-        <mat-card-header style="border-bottom:solid 2px;">
-          <mat-card-title-group>
-            <mat-card-title>
-              <div mat-list-item style="display: flex; align-items: center; width:400px;">
-                <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
-                          style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
-                <h1 style="font-size:20pt">Company X review</h1>
-              </div>
-            </mat-card-title>
-            <mat-card-subtitle style="margin-bottom:10px;">{{todayDate | date:'short'}}</mat-card-subtitle>
-          </mat-card-title-group>
-        </mat-card-header>
-        <mat-card-content style="font-size:16pt; margin-top: 20px;">
-          <p>Company X is due to be reviewed.</p>
-          <br />
-          <p>Please review the request and respond accordingly.</p>
-
-        </mat-card-content>
-        <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
-          <button mat-raised-button
-                  style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
-            <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
-          </button>
-        </mat-card-actions>
-      </mat-card>
-    </div>
   </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
+
+  <mat-tab label="Inventory">
+
+    <table mat-table [dataSource]="dataSourceInventory" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
+      <ng-container matColumnDef="id" style="width: 800px;">
+        <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
+        <td mat-cell *matCellDef="let row" style="width: 800px;">
+
+          <mat-card style="width: 800px; margin-bottom: 20px; margin-top: 20px;">
+            <mat-card-header style="border-bottom:solid 2px;">
+              <mat-card-title-group>
+                <mat-card-title>
+                  <div mat-list-item style="display: flex; align-items: center; width:750px;">
+                    <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
+                              style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
+                    <h1 style="font-size:20pt">{{row.notification_Type.name}}</h1>
+                  </div>
+                </mat-card-title>
+                <mat-card-subtitle style="margin-bottom:10px;">{{row.send_Date}}</mat-card-subtitle>
+              </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content style="font-size:16pt; margin-top: 20px;">
+              <p>{{row.name}}</p>
+              <br />
+              <p>{{row.notification_Type.description}}</p>
+
+            </mat-card-content>
+            <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
+              <button mat-raised-button
+                      style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
+                <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </td>
+      </ng-container>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="width: 800px; background-color: #ffffff00"></tr>
+    </table>
+
+  </mat-tab>
+
+  <mat-tab label="Procurement">
+
+    <table mat-table [dataSource]="dataSourceProcurement" class="mat-elevation-z8" id="table" style="display: flex; justify-content: center; align-items: center;  background-color: #ffffff00; width: 800px;">
+      <ng-container matColumnDef="id" style="width: 800px;">
+        <!--<th mat-header-cell *matHeaderCellDef style="color:white; font-weight:600;"> No. </th>-->
+        <td mat-cell *matCellDef="let row" style="width: 800px;">
+
+          <mat-card style="width: 800px; margin-bottom: 20px; margin-top: 20px;">
+            <mat-card-header style="border-bottom:solid 2px;">
+              <mat-card-title-group>
+                <mat-card-title>
+                  <div mat-list-item style="display: flex; align-items: center; width:750px;">
+                    <mat-icon aria-hidden="false" aria-label="admin icon" fontIcon="mark_chat_unread"
+                              style="width:30px; height: 44px; margin-top: 2%;"></mat-icon>
+                    <h1 style="font-size:20pt">{{row.notification_Type.name}}</h1>
+                  </div>
+                </mat-card-title>
+                <mat-card-subtitle style="margin-bottom:10px;">{{row.send_Date | date:'dd/MM/yyyy, h:mm a'}}</mat-card-subtitle>
+              </mat-card-title-group>
+            </mat-card-header>
+            <mat-card-content style="font-size:16pt; margin-top: 20px;">
+              <p>{{row.name}}</p>
+              <br />
+              <p>{{row.notification_Type.description}}</p>
+
+            </mat-card-content>
+            <mat-card-actions style="display: flex; justify-content: end; align-items: end; margin-top: 5%;">
+              <button mat-raised-button
+                      style="width: 150px; font-size: 14px; height: 42px; margin: 10px; background-color: #244688; color: white; border: 3px solid #244688; ">
+                <mat-icon matPrefix style="margin-right:10%;">visibility</mat-icon>View
+              </button>
+            </mat-card-actions>
+          </mat-card>
+        </td>
+      </ng-container>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" style="width: 800px; background-color: #ffffff00"></tr>
+    </table>
+
+  </mat-tab>
+
+  <mat-tab label="Finance"> Finance </mat-tab>
 </mat-tab-group>
 
